# fleet-floor-workflows

./: .gitleaks.toml  README.md
.github/: CODEOWNERS
.github/workflows/: generic-ci.yml  generic-dep-audit.yml  generic-typecheck.yml  js-ci.yml  js-dep-audit.yml  js-typecheck.yml  python-ci.yml  python-dep-audit.yml  python-typecheck.yml  sast.yml  secret-scan.yml  selftest.yml
generic-sample/: Makefile  hello.sh  index.html
generic-sample-redteam/: index.html  leak.sh
js-sample/: package-lock.json  package.json  tsconfig.json
js-sample/src/: index.js
js-sample/test/: add.test.js
sample/: pyproject.toml
sample/src/sample_pkg/: __init__.py
sample/tests/: test_sample.py
templates/: fleet-floor.yml
